Log file implementada, tudo ate aqui funciona